src/objects/Project__c.object
<CustomObject>
    <description>The AECOM Project repository for project descriptions for use in proposals</description>
    <fields>
        <fullName>AECOM_Region__c</fullName>
        <inlineHelpText>Region where project is located, not necessarily the AECOM Region responsible for project delivery.</inlineHelpText>
        <label>AECOM Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOM_Role__c</fullName>
        <description>Prime: AECOM contracted directly with project owner. Subcontractor: AECOM contracted with another entity that contracted directly with the owner. Joint venture: AECOM partnered with other firm(s).</description>
        <inlineHelpText>Describes AECOM&apos;s role on the project. 
Prime: AECOM contracted directly with project owner. 
Subcontractor: AECOM contracted with another entity that contracted directly with the owner. 
Joint venture: AECOM partnered with other firm(s).</inlineHelpText>
        <label>AECOM Role</label>
        <picklist>
            <picklistValues>
                <fullName>Prime</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subconsultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Venture Majority Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_construction__c</fullName>
        <description>Final value after construction completion. This is independent of information from Oracle.</description>
        <inlineHelpText>Final value after construction completion. This is independent of information from Oracle.</inlineHelpText>
        <label>Actual Construction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <description>Brief description of the project (750 characters), beginning with an active verb, summarizing all aspects of the project, to be output in a table format.</description>
        <inlineHelpText>Brief description of the project (750 characters), beginning with an active verb, summarizing all aspects of the project, to be output in a table format.</inlineHelpText>
        <label>Brief Description</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <description>The AECOM business line(s) involved in the project work. Multiple business lines can be selected, if appropriate. Can be edited using replace after the conversion.</description>
        <inlineHelpText>The AECOM business line(s) involved in the project work. Multiple business lines can be selected, if appropriate.</inlineHelpText>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining and Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning, Design and Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <description>Market Category (not Market Sector)</description>
        <inlineHelpText>Market Category (not current Market Sector)</inlineHelpText>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airports/Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts, Culture, Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brownfields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Redevelopment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Surveying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention Venues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate + Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Centres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defence/Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design-Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Energy Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - College / University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - K-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHS Management Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Eff/Carbon Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering PMCM Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Checked_and_okay_to_use__c</fullName>
        <formula>IF ( (Date_Last_Update__c  &gt; ( Search_Completion_Date__c - 365)) &amp;&amp; ( Complete_CM_Review__c = TRUE), &apos;Reviewed and Edited&apos;, 
IF ( (Date_Last_Update__c  &gt; ( Search_Completion_Date__c - 365)) &amp;&amp; ( Complete_CM_Review__c = FALSE), &apos;Reviewed, Not Edited&apos;, 
IF ( Date_Last_Update__c  &lt; (TODAY() - 365) &amp;&amp; ( Complete_CM_Review__c = TRUE), &apos;Edited, not Reviewed&apos;,
IF (Date_Last_Update__c  &lt; (TODAY() - 365) &amp;&amp; ( Complete_CM_Review__c = FALSE), &apos;Not Edited or Reviewed&apos;, 
IF ( Date_Last_Update__c &gt; (TODAY () - 365) &amp;&amp; ( Complete_CM_Review__c = TRUE), &apos;Reviewed and Edited&apos;,
IF ( Date_Last_Update__c &gt; (TODAY () - 365) &amp;&amp; ( Complete_CM_Review__c = FALSE), &apos;Reviewed, not Edited&apos;,
IF (Complete_CM_Review__c = TRUE, &apos;Edited&apos;,
 &apos;Not Edited or Reviewed&apos;
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checked and okay to use?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_to_look_up_US_County__c</fullName>
        <formula>&apos;http://www.naco.org/Counties/Pages/CitySearch.aspx&apos;</formula>
        <inlineHelpText>Click to look up the county using city and state or ZIP. Copy and paste result into Project County field.</inlineHelpText>
        <label>Click to look up US County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Group__c</fullName>
        <formula>TEXT( Owner__r.Client_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inherited from the Owner Account - describes what the End Client does.</inlineHelpText>
        <label>Client Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_contract__c</fullName>
        <description>Contract number assigned by the client.</description>
        <inlineHelpText>Contract number assigned by the client (not AECOM&apos;s number).</inlineHelpText>
        <label>Client Contract Number</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_254_Text__c</fullName>
        <inlineHelpText>US Federal code useful for searching for project types. No longer used by US government, but still used by some local governments.</inlineHelpText>
        <label>Code 254 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code_254__c</fullName>
        <inlineHelpText>US Federal code useful for searching for project types. No longer used by US government, but still used by some local governments.</inlineHelpText>
        <label>Code 254</label>
        <picklist>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Code_330_Text__c</fullName>
        <inlineHelpText>US Federal coding system but useful for searching for project types.
Contains all codes associated with the work AECOM is doing on this project.</inlineHelpText>
        <label>Code 330 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code_330__c</fullName>
        <inlineHelpText>US Federal code useful for searching for project types.</inlineHelpText>
        <label>Code 330</label>
        <picklist>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Commendations_Excerpt__c</fullName>
        <description>Quoted extract from commendation with author and date. Full commendation can be in commendations object.</description>
        <inlineHelpText>Quoted extract from commendation with author and date. Full commendation can be in commendations object.</inlineHelpText>
        <label>Commendations Excerpt</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete_CM_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that should be checked if the entire record has been reviewed.</description>
        <inlineHelpText>Check this box if the entire record has been reviewed in accordance with established guidelines.</inlineHelpText>
        <label>Complete CM Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <formula>NULLVALUE(Date_Actual_Completion__c, Date_Estimated_Completion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidential_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked box indicates that AECOM&apos;s contract requires that fee information be kept confidential. Fee will not display on output.</description>
        <inlineHelpText>Checked box indicates that AECOM&apos;s contract requires that fee information be kept confidential. Fee will not display on output.</inlineHelpText>
        <label>Confidential Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidential_Details__c</fullName>
        <inlineHelpText>This information can be used only with permission of the Account Manager - click on the Owner/End Client field to view the Account record and the Account Manager&apos;s name.</inlineHelpText>
        <label>Confidential Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Confidential_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked, the City, State/Province, and Country fields should not output on the project sheets</description>
        <inlineHelpText>If this box is checked, the terms of the contract require us to not disclose the location of the project.</inlineHelpText>
        <label>Confidential Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidential_Owner_Alias__c</fullName>
        <description>An alias that will output instead of the owner account name.</description>
        <inlineHelpText>An alias that will output instead of the project name.</inlineHelpText>
        <label>Confidential Owner Alias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confidential_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the client is confidential and the name should not output.</description>
        <inlineHelpText>Checked if the client is confidential and the name should not update.</inlineHelpText>
        <label>Confidential Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidential_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate that the client and owner names should not appear on output.</description>
        <inlineHelpText>Indicates that AECOM has a contractual agreement that the owner or the Prime account name should not be associated with the project work.</inlineHelpText>
        <label>Confidential Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Cost__c</fullName>
        <formula>If(Actual_construction__c &gt; 0,Actual_construction__c, Estimated_construction__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Construction Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Modifications__c</fullName>
        <description>Contract Modificiations</description>
        <inlineHelpText>Contains Mod Number, Date, Amount and comments each on a separate line.</inlineHelpText>
        <label>Contract Modifications</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Contractual method under which services will be delivered and billed.</description>
        <inlineHelpText>Contractual method under which services will be delivered and billed.</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cost Plus Award Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus Fixed Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus Fixed Fee and Lump Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus Fixed Fee Labor Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Reimbursable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm Fixed Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guaranteed Maximum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indefinite Quantity Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum, Time &amp; Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum/Fixed Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum/Time Charge Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum and Cost Plus Fixed Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage of Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Diem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task Order/On-Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time &amp; Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time &amp; Materials Not to Exceed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time and Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time-Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Charge w/Max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Charge with Upset Limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Price</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cost_and_Schedule_Comments__c</fullName>
        <label>Cost and Schedule Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DO_TO_Contract_Number__c</fullName>
        <inlineHelpText>Client&apos;s contract number associated with this particular task order (not the overall program)</inlineHelpText>
        <label>DO TO Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_TO_Number__c</fullName>
        <inlineHelpText>Task Order number preceded by terminology used by client, e.g., TO-1 or DO 14</inlineHelpText>
        <label>DO/TO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Actual_Completion__c</fullName>
        <description>The actual date the project was completed or when final billing occurred.</description>
        <inlineHelpText>The actual date the project was completed or when final billing occurred.</inlineHelpText>
        <label>Date Actual Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Construction_Start__c</fullName>
        <description>If project involves construction, date construction began or is scheduled to begin.</description>
        <inlineHelpText>If project involves construction, date construction began or is scheduled to begin.</inlineHelpText>
        <label>Date Construction Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Construction_completion__c</fullName>
        <description>If project involves construction, date construction ended or is scheduled to end.</description>
        <inlineHelpText>If project involves construction, displays date construction ended or is scheduled to end.</inlineHelpText>
        <label>Date Construction Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Design_Start__c</fullName>
        <description>If project involves design, the date design began or is scheduled to begin.</description>
        <inlineHelpText>If project involves design, the date design began or is scheduled to begin.</inlineHelpText>
        <label>Date Design Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Design_completion__c</fullName>
        <description>If project involves design, date design ended or is scheduled to end.</description>
        <inlineHelpText>If project involves design, date design ended or is scheduled to end.</inlineHelpText>
        <label>Date Design Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Estimated_Completion__c</fullName>
        <description>Original contracted completion date. Use when project is ongoing.</description>
        <inlineHelpText>Original contracted completion date. Used when project is ongoing.</inlineHelpText>
        <label>Date Estimated Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Update__c</fullName>
        <description>Date set by the Content Manager</description>
        <inlineHelpText>The date this project record was last updated (not including minor revisions such as correction of typos).</inlineHelpText>
        <label>Date Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Started__c</fullName>
        <description>Date work started or booking date.</description>
        <inlineHelpText>Date work started or booking date.</inlineHelpText>
        <label>Date Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>AECOM_Primary_Department__c</referenceTo>
        <relationshipLabel>Project Profiles</relationshipLabel>
        <relationshipName>Project_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EPA_Region__c</fullName>
        <inlineHelpText>US EPA region in which the project resides, not necessarily where AECOM staff worked on the project.</inlineHelpText>
        <label>EPA Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit_Project_Description__c</fullName>
        <formula>&quot;Click &quot; &amp; HYPERLINK(&quot;/apex/ProjectTextEdit?id=&quot; +   Id , &quot;Here&quot;,&quot;_top&quot;)  &amp; &quot; to Edit the Project Description&quot;</formula>
        <label>Edit Project Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_construction__c</fullName>
        <description>Estimated value prior to construction completion. This is independent of information from Oracle.</description>
        <inlineHelpText>Estimated value prior to construction completion. This is independent of information from Oracle.</inlineHelpText>
        <label>Estimated Construction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <formula>IF ( RecordType.Name = &apos;Program&apos;,  Program_ceiling__c, IF(Oracle_Booked_Amount__c &gt;0,Oracle_Booked_Amount__c, IF (Final_fee_value__c &gt;0, Final_fee_value__c,  IF(Modified_fee_value__c &gt;0,Modified_fee_value__c , Initial_fee_value__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_fee_value__c</fullName>
        <description>Final fee based on Oracle closing.</description>
        <inlineHelpText>Final fee based on Oracle closing.</inlineHelpText>
        <label>Final Fee Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Former_Project_No__c</fullName>
        <description>Legacy firm&apos;s project number.</description>
        <inlineHelpText>Legacy firm&apos;s project number.</inlineHelpText>
        <label>Former Project Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSA_Region__c</fullName>
        <inlineHelpText>US GSA region in which the project resides, not necessarily where AECOM staff worked on the project. Used for searching for projects in particular regions of the US and territories.</inlineHelpText>
        <label>GSA Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDReport__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDReport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>The image and caption of the primary photo.  (may use library instead)</description>
        <inlineHelpText>The image and caption of the primary photo</inlineHelpText>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Images_additional__c</fullName>
        <description>Additional Images and captions --</description>
        <inlineHelpText>Additional Images and captions --</inlineHelpText>
        <label>Images Additional</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Initial_fee_value__c</fullName>
        <description>Booking amt</description>
        <inlineHelpText>Booking amt</inlineHelpText>
        <label>Initial Fee Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Key_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Key selling project for AECOM</inlineHelpText>
        <label>Key Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModified__c</fullName>
        <label>Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>latitude of the specific project site</description>
        <inlineHelpText>latitude of the specific project site</inlineHelpText>
        <label>Latitude</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyIdentifier__c</fullName>
        <description>The legacy key to the conversion source</description>
        <externalId>true</externalId>
        <inlineHelpText>The legacy key to the conversion source</inlineHelpText>
        <label>Legacy Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Contact__c</fullName>
        <description>The contact from the legacy system
format: Firstname+ &apos; &apos; +  lastname + &apos;,  &apos; + Title + StreetAddress + City + State &apos;;&apos;</description>
        <inlineHelpText>The contact from the legacy system</inlineHelpText>
        <label>Legacy Contact</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Conversion_Source__c</fullName>
        <description>The source for the data converted (BDIS - Vision)</description>
        <inlineHelpText>The source for the data converted (BDIS - Vision)</inlineHelpText>
        <label>Legacy Conversion Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Export__c</fullName>
        <description>Shows what the legacy system had in terms of if it should be exported</description>
        <label>Legacy Export</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Former_Employees__c</fullName>
        <label>Legacy Former Employees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Market_Segment__c</fullName>
        <description>Legacy Market Segment</description>
        <label>Legacy Market Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_OPCO__c</fullName>
        <description>Source of the project, if it came from one of the legacy systems.</description>
        <inlineHelpText>Source of the project, if it came from one of the legacy systems.</inlineHelpText>
        <label>Legacy OPCO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Owner_Mailing__c</fullName>
        <formula>IF (CONTAINS (Legacy_Owner__c, &quot;, City of&quot;) , &quot;City of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-9))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, Cities of&quot;) , &quot;Cities of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-11))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, Town of&quot;) , &quot;Town of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-9))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, Region of&quot;) , &quot;Region of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-11))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, Municipality of&quot;) , &quot;Municipality of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-17))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, Charter Township of&quot;) , &quot;Charter Township of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-21))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, Township of&quot;) , &quot;Township of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-13))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, City and County of&quot;) , &quot;City and County of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-20))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, State of&quot;) , &quot;State of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-10))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, Port of&quot;) , &quot;Port of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-9))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, District of&quot;) , &quot;District of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-13))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, County of&quot;) , &quot;County of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-11))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, Government of&quot;) , &quot;Government of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-15))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, Borough of&quot;) , &quot;Borough of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-12))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, Village District of&quot;) , &quot;Village District of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-21))) , 
IF (CONTAINS (Legacy_Owner__c, &quot;, Metropolitan Government of&quot;) , &quot;Metropolitan Government of &quot; &amp; TRIM (LEFT (Legacy_Owner__c, (LEN (Legacy_Owner__c)-28))) , Legacy_Owner__c ))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy Owner Mailing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Owner__c</fullName>
        <label>Legacy Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Prime__c</fullName>
        <label>Legacy Prime</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Project_Awards__c</fullName>
        <label>Legacy Project Awards</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Subcontractor__c</fullName>
        <description>List of the subcontractors
Name + Specialty + Service + Cost if available.</description>
        <label>Legacy Subcontractor</label>
        <length>6600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Output__c</fullName>
        <formula>If(Confidential_Location__c , &quot;Confidential Location, &quot; &amp;  Project_Geography__c , 
BLANKVALUE(Project_Sheet_Location__c,
IF (ISBLANK(Project_StateProvinceEmirate__c),Project_City__c + &quot;, &quot; + Project_Country__c,
Project_City__c + &quot;, &quot; + Project_StateProvinceEmirate__c  + &quot;, &quot; + Project_Country__c )))</formula>
        <label>Location Output</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>The longitude of the specific project location if available</description>
        <label>Longitude</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>